# advent_of_code

./: .gitignore  ]  ex.py  mix.exs
Year2024/: mix.exs
Year2024/lib/: advent_of_code.ex  grid.ex  heap_utils.ex  maze.ex  point.ex
Year2024/lib/Year2024/: day1.ex  day2.ex  day4.ex  day7.ex  day9.ex
Year2024/output/: day24.txt
Year2024/output/day16/: output.txt
Year2024/test/: day21.test.exs
Year2025/: README.md  meson.build  newday.sh
Year2025/src/common/: meson.build
Year2025/src/common/include/aoc/: aoc.hpp  dynamic_bit.hpp  fileHelpers.hpp  graph.hpp  grid.hpp  gtestHelpers.hpp  hashHelpers.hpp  matrix.hpp  numberHelpers.hpp  points.hpp  range.hpp  rangeHelpers.hpp  stringHelper.hpp
Year2025/src/common/src/: grid.cpp  range.cpp
Year2025/src/day01/: solution.hpp  test.cpp
Year2025/src/day02/: solution.hpp  test.cpp
Year2025/src/day03/: solution.hpp  test.cpp
Year2025/src/day04/: solution.hpp  test.cpp
Year2025/src/day05/: solution.hpp  test.cpp
Year2025/src/day06/: solution.hpp  test.cpp
Year2025/src/day07/: solution.hpp  test.cpp
Year2025/src/day08/: solution.hpp  test.cpp
Year2025/src/day09/: solution.hpp  test.cpp
Year2025/src/day10/: solution.hpp  test.cpp
Year2025/src/day11/: solution.hpp  test.cpp
Year2025/src/day12/: gift.hpp  giftBox.hpp  solution.hpp  test.cpp  treeRegion.hpp
Year2025/subprojects/abseil-cpp-20250814.1/: .meson-subproject-wrap-hash.txt
Year2025/subprojects/spdlog-1.15.3/: .meson-subproject-wrap-hash.txt
lib/: advent_of_code.ex  counter.ex  day1.ex  day2.ex  day3.ex  day4.ex  day5.ex  day6.ex  day7.ex  day8.ex  day9.ex  grid.ex  list_utils.ex  maputils.ex  maze.ex  point.ex
lib/Year2024/: day3.ex  day5.ex  day6.ex  day8.ex
lib/Year2024/day10/: part1.ex
lib/Year2024/day12/: plot.ex
lib/Year2024/day13/: part1.ex
lib/Year2024/day14/: part1.ex
lib/Year2024/day15/: part2.ex
lib/Year2024/day16/: part1.ex
lib/Year2024/day17/: part1.ex
lib/Year2024/day18/: Part2.ex
lib/Year2024/day19/: part1.ex
lib/Year2024/day21/: arrow_pad.ex  helpers.ex  part2.ex
lib/day10/: part1.ex  part2.ex
lib/day11/: part1.ex  part2.ex
lib/day12/: part1.ex  part2.ex  plot.ex  region.ex
lib/day13/: part1.ex  part2.ex
lib/day14/: part1.ex  part2.ex
lib/day15/: part1.ex  part2.ex
lib/day16/: part1.ex
lib/day17/: part1.ex  part2.ex
lib/day18/: Part1.ex  Part2.ex
lib/day19/: part1.ex  part2.ex
lib/day20/: part1.ex  part2.ex
lib/day21/: arrow_pad.ex  helpers.ex  numpad.ex  part1.ex
lib/day22/: part1.ex  part2.ex
lib/day23/: part1.ex  part2.ex
lib/day24/: part1.ex  part2.ex
lib/day25/: part1.ex
lib/day9/: part2.ex
test/: day19_test.exs  day22.test.exs  day2_test.exs
test/day17/: part1_test.exs
test/day9/: part2_test.exs
(+24 files in other folders)
